log
nohup: ignoring input
[INFO] [01/03/2020 22:27:29 PM]: Loading database from /root/AmazonOffers-Manager/users.db
[INFO] [01/03/2020 22:27:29 PM]: Done! Database was loaded succesfully!
[INFO] [01/03/2020 22:27:30 PM]: Connecting...
[INFO] [01/03/2020 22:27:30 PM]: Connected! Production DC4 - IPv4 - TCPAbridgedO
[INFO] [01/03/2020 22:27:30 PM]: Session initialized: Layer 105
[INFO] [01/03/2020 22:27:30 PM]: Device: CPython 3.7.3 - Pyrogram 0.16.0
[INFO] [01/03/2020 22:27:30 PM]: System: Linux 5.0.0-38-generic (EN)
[INFO] [01/03/2020 22:27:30 PM]: [AmazonOffers] [LOAD] MessageHandler("anti_flood") in group -1 from "AmazonBot.plugins.antiflood"
Pyrogram v0.16.0, Copyright (C) 2017-2019 Dan <https://github.com/delivrance>
Licensed under the terms of the GNU Lesser General Public License v3 or later (LGPLv3+)

Traceback (most recent call last):
  File "bot.py", line 26, in <module>
    BOT.start()
  File "/usr/local/lib/python3.7/dist-packages/pyrogram/client/client.py", line 840, in start
    self.initialize()
  File "/usr/local/lib/python3.7/dist-packages/pyrogram/client/client.py", line 303, in initialize
    self.load_plugins()
  File "/usr/local/lib/python3.7/dist-packages/pyrogram/client/client.py", line 1503, in load_plugins
    module = import_module(module_path)
  File "/usr/lib/python3.7/importlib/__init__.py", line 127, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1006, in _gcd_import
  File "<frozen importlib._bootstrap>", line 983, in _find_and_load
  File "<frozen importlib._bootstrap>", line 967, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 677, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 724, in exec_module
  File "<frozen importlib._bootstrap_external>", line 860, in get_code
  File "<frozen importlib._bootstrap_external>", line 791, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/root/AmazonOffers-Manager/AmazonBot/plugins/channels.py", line 16
    choices = defaultdict(lambda: defaultdict(list))
          ^
SyntaxError: invalid syntax
[INFO] [01/03/2020 22:27:30 PM]: Send 8 acks
[INFO] [01/03/2020 22:27:31 PM]: Send 8 acks
[INFO] [01/03/2020 22:27:33 PM]: Send 8 acks
[INFO] [01/03/2020 22:27:34 PM]: Send 8 acks
[INFO] [01/03/2020 22:27:36 PM]: Send 8 acks
[INFO] [01/03/2020 22:27:37 PM]: Send 8 acks
[INFO] [01/03/2020 22:27:38 PM]: Send 8 acks
[INFO] [01/03/2020 22:27:40 PM]: Send 8 acks
[INFO] [01/03/2020 22:27:41 PM]: Send 8 acks
[INFO] [01/03/2020 22:27:43 PM]: Send 8 acks
[INFO] [01/03/2020 22:27:44 PM]: Send 8 acks
[INFO] [01/03/2020 22:27:45 PM]: Send 8 acks
[INFO] [01/03/2020 22:27:46 PM]: Send 8 acks
[INFO] [01/03/2020 22:27:48 PM]: Send 8 acks
[INFO] [01/03/2020 22:27:50 PM]: Send 8 acks
[INFO] [01/03/2020 22:27:51 PM]: Send 8 acks
[INFO] [01/03/2020 22:27:52 PM]: Send 8 acks
[INFO] [01/03/2020 22:27:54 PM]: Send 8 acks
[INFO] [01/03/2020 22:27:55 PM]: Send 8 acks
[INFO] [01/03/2020 22:27:56 PM]: Send 8 acks
[INFO] [01/03/2020 22:27:58 PM]: Send 8 acks
[INFO] [01/03/2020 22:27:59 PM]: Send 8 acks
[INFO] [01/03/2020 22:28:00 PM]: Send 8 acks
[INFO] [01/03/2020 22:28:02 PM]: Send 8 acks
[INFO] [01/03/2020 22:28:04 PM]: Send 8 acks
[INFO] [01/03/2020 22:28:05 PM]: Send 8 acks
